[tool.poetry]
name = "kimsufi"
version = "0.1.0"
description = "kimsufi server monitor"
authors = ["dev <dev@qiyutech.tech>"]

[tool.poetry.dependencies]
python = "^3.9"

requests = "*"
pydantic = "*"
click = "*"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
